<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Cadastro de Vinícola -->
    <string name="label_nome_vinicola">Nome da Vinícola</string>
    <string name="label_pais">País</string>
    <string name="label_regiao">Região</string>
    <string name="hint_nome_vinicola">Digite o nome da vinícola</string>
    <string name="hint_pais">Digite o país</string>
    <string name="hint_regiao">Digite a região</string>
    <string name="btn_salvar_vinicola">Salvar Vinícola</string>
    <string name="msg_campos_obrigatorios">Por favor, preencha todos os campos obrigatórios.</string>
    <string name="msg_vinicola_cadastrada_sucesso">Vinícola cadastrada com sucesso!</string>

    <!-- Campos gerais do app -->
    <string name="app_name">Wine</string>
    <string name="harmonizacoes">Harmonizações</string>
    <string name="notas_de_degustacao">Notas de Degustação</string>
    <string name="tipo">Tipo</string>
    <string name="safra">Safra</string>
    <string name="nome_do_vinho">Nome Completo do Vinho</string>
    <string name="sugestoes_de_harmonizacao">Sugestões de Harmonização</string>
    <string name="casta_e_produtor">Casta e Produtor</string>
    <string name="teor_alcoolico">Teor Alcoólico</string>
    <string name="descricao_completa">Descrição Completa:</string>
    <string name="vinicola">Vinícola</string>
    <string name="doc">DOC</string>
    <string name="varietal">Varietal</string>
    <string name="nome_da_vinicola">Nome da Vinícola</string>
    <string name="endereco">Endereço</string>
    <string name="cidade">Cidade</string>
    <string name="pais">País</string>
    <string name="salvar_vinicola">Salvar Vinícola</string>
    <string name="wine">Wine</string>
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="exsenha">123456e</string>
    <string name="exemail">email@gmail.com</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="nome_do_representante">Nome do Representante</string>
    <string name="criar_adm">Criar ADM</string>
    <string name="forma_de_pagamento">Forma de Pagamento:</string>
    <string name="salvar_pedido">Salvar Pedido</string>
    <string name="criar_cliente">Criar Cliente</string>
    <string name="contatos">Contatos</string>
    <string name="responsavel">Responsável</string>
    <string name="cnpj_cpf">CNPJ / CPF</string>
    <string name="nome_do_cliente">Nome do Cliente</string>
    <string name="apresentacao_de_vinhos">Apresentação de Vinhos</string>
    <string name="visualizar_clientes">Visualizar Clientes</string>
    <string name="cadastrar_representantes">Cadastrar Representantes</string>
    <string name="pedidos_e_comissoes">Pedidos e Comissões</string>
    <string name="emissao_de_pedidos">Emissão de Pedidos</string>
    <string name="visualizar_representantes">Visualizar Representantes</string>
    <string name="cadastrar_clientes">Cadastrar Clientes</string>
    <string name="cadastrar_vinhos">Cadastrar Vinhos</string>
    <string name="cadastrar_adm">Cadastrar ADM</string>
    <string name="criar_representante">Criar Representante</string>
    <string name="codigo">Código</string>
    <string name="nome_da_empresa">Nome da Empresa</string>
    <string name="total">Total</string>
    <string name="comissao">Comissão</string>
    <string name="vinicolas">Vinícolas</string>
    <string name="preco">Preço</string>
    <string name="wine_saved_success">Vinho salvo com sucesso\n</string>
    <string name="salvar_vinho">Salvar Vinho</string>
    <string name="categoria_comercial">Categoria comercial</string>
    <string name="acidez">Acidez</string>
    <string name="temperatura_de_servi_o">Temperatura de serviço</string>
    <string name="tempo_de_guarda">Tempo de guarda</string>
    <string name="avalia_o">Avaliação</string>
    <string name="estoque">Estoque</string>
    <string name="nao_pode_abrir_tela_repetida">Você já está nesta tela!</string>
    <string name="acesso_nao_disponivel">Acesso não disponível para este perfil.</string>
    <string name="erro_abrir_menu">Erro ao abrir o menu!</string>
    <string name="funcao_em_desenvolvimento">Função em desenvolvimento.</string>
    <string name="price">Preço:</string>
    <string name="stock">Estoque:</string>
    <string name="rating">Avaliação:</string>
    <string name="aging_time">Tempo de Envelhecimento:</string>
    <string name="serving_temperature">Temperatura de Serviço:</string>
    <string name="acidity">Acidez:</string>
    <string name="visualizar_ADM">Vizualizar ADM</string>
    <string name="cadastrar_vinicula">Cadastrar Vinículas</string>
    <string name="visualizar_vinhos">Visualizar Vinhos</string>
    <string name="visualizar_pedidos">Visualizar Pedidos</string>
    <string name="cadastrar_Pedido">Cadastrar Pedido</string>
    <string name="telefone">Celular</string>
    <string name="extelefone">987654321</string>
    <string name="otimizar_rota">Otimizar Rota</string>
    <string name="UsuáriosPendentes">Usuários Pendentes</string>
    <string name="aprovar_clientes">Aprovar Clientes</string>
    <string name="observacoes">Observações</string>
    <string name="representantes">Representantes</string>
    <string name="informa_es_extras">Informações extras</string>
    <string name="observação">Observação</string>
    <string name="ex_cidade">Ex: Florianópolis</string>
</resources>
