<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textClientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_cliente"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textClientEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/textClientPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/textClientCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cidade"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/textClientObservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observacoes"
            android:layout_marginTop="4dp"
            android:maxLines="3"
            android:ellipsize="end" />

        <Button
            android:id="@+id/buttonApprove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aprovar_clientes"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/vinho_claro"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
